# uttt

./: CMakeLists.txt  Makefile
include/: common.h  ia.h  model.h  view.h
src/: CMakeLists.txt  Makefile  ia.c  model.c  utictactoe.c  utictactoe.h  view.c
